fix lazy image doesn't load on safari

--- a/src/components/Detail/details.scss
+++ b/src/components/Detail/details.scss
@@ -31,9 +31,11 @@
       }
 
       &__poster {
-        min-width: 20rem;
-        min-height: 30rem;
-        max-height: 40rem;
+        // min-width: 20rem;
+        // min-height: 30rem;
+        // max-height: 40rem;
+        width: 26rem;
+        height: 40rem;
         margin-top: -20rem;
         border-radius: 10px;
         background-color: $color-gray-light;
@@ -41,13 +43,13 @@
 
         @media only screen and (max-width: $breakpoint-md) {
           width: 20rem;
+          height: 30rem;
         }
       }
 
       &__content {
         flex-basis: 75%;
         font-size: 1.4rem;
-        line-height: 2.5rem;
         padding: 2rem;
 
         @media only screen and (max-width: $breakpoint-md) {
@@ -56,11 +58,15 @@
 
         & h1 {
           font-size: 3.6rem;
-          margin-bottom: 2rem;
+          margin-bottom: 1.2rem;
 
           @media only screen and (max-width: $breakpoint-md) {
             font-size: 2.8rem;
           }
+        }
+
+        & p {
+          line-height: 2rem;
         }
 
         &-fact {
